# intentions

./: .env.example  .gitignore  EXAMPLES.md  LISEZMOI.md  MODEDEMPLOI.md  PROS_CONS.md  PROTOCOL.md  README.md  TECHNICAL_STACK.md  USERGUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
.github/workflows/: ci.yml
eval/: __init__.py  bench.py  confusion.py  crossval.py  crossval_results.json  dataset.jsonl  dataset_oos.jsonl  generated_examples.json  harness.py  llm_shootout.py  skore_comparison.md  skore_eval.py  skore_results.json  test_confusion_ink.py  test_eval_deepeval.py  test_eval_giskard.py  test_eval_metrics.py  thresholds.py  violin.py
intent_engine/: __init__.py  __main__.py  api.py  base.py  bert_engine.py  cli.py  config.py  embeddings.py  fasttext_engine.py  i18n.py  kb.py  lang.py  llm_engine.py  mlp.py  ollama_client.py  router.py  tfidf_engine.py
knowledge_base/: _FORMAT.md  auto.md  contrat-et-paiement.md  habitation.md  sante-prevoyance.md  service-client.md
locales/: i18n.yaml
scripts/: download_fasttext.py  generate_examples.py  integrate_examples.py  render_mermaid.py  screenshots.py
tests/: conftest.py  test_engines.py  test_i18n.py  test_kb.py  test_lang.py  test_router_api.py
web/: app.js  index.html
